# school-data-analyzer-v1

./: .taurignore  angular.json  package.json  pnpm-lock.yaml
src/: styles.css
src-tauri/: .env  .gitignore  Cargo.toml  database.db  tauri.conf.json
src-tauri/migrations/2024-07-09-061334_create_tests/: down.sql  up.sql
src-tauri/migrations/2024-07-10-082858_create_students/: up.sql
src-tauri/migrations/2024-07-15-071006_create_teachers/: down.sql  up.sql
src-tauri/migrations/2024-07-17-201439_create_tables/: up.sql
src-tauri/src/: main.rs  schema.rs
src-tauri/src/commands/: file.rs  mod.rs  processor.rs  store.rs  student.rs  teacher.rs
src-tauri/src/database/: mod.rs
src-tauri/src/exp/: mod.rs
src-tauri/src/models/: division.rs  grade.rs  mod.rs  speciality.rs  student.rs  subject.rs  teacher.rs
src-tauri/src/repository/: division.rs  grade.rs  mod.rs  speciality.rs  student.rs  subject.rs  teacher.rs
src/app/: app.component.html  app.component.ts  app.routes.ts
src/app/pages/dashboard/: dashboard.component.html  dashboard.component.ts  dashboard.service.ts
src/app/pages/student/: student.component.html  student.component.ts  student.service.ts
src/app/pages/teacher/: teacher.component.html  teacher.component.ts  teacher.service.ts
