[package]
name = "school-data-analyzer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.2", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
polars = { version = "0.41.3", features = ["lazy"] }
#rusqlite = "0.31.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
sqlx-conditional-queries = { version = "0.1.4", features = ["sqlite"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
